Fix: SwarmTest 100-node scaling with minimal bootstrap set
Change SwarmTest to use 5-node bootstrap kernel instead of single node for
large_tests, distributing observer load across multiple nodes while still
testing 95 simultaneous joins.

Root cause: 99 nodes joining through single bootstrap node caused observer
set churn during view changes, resulting in 51/49 split failure with
"Not observer, reseed" errors.

Solution:
- Bootstrap 5-node kernel first and wait for stabilization
- 95 remaining nodes join simultaneously through 5 bootstrap seeds
- Distributes join load across multiple observers (vs single bottleneck)
- Single view change successfully installs all 95 joins

Test results:
- Before: 51 nodes joined, 49 failed with observer errors
- After: All 100 nodes join successfully in ~18 seconds
- Validated with multiple consecutive runs

References: Delos-7p6k (SwarmTest scaling investigation)